--- a/.gitconfig
+++ b/.gitconfig
@@ -1,4 +1,4 @@
-[alias]
+[jalias]
 	# View abbreviated SHA, description, and history graph of the latest 20 commits.
 	l = log --pretty=oneline -n 20 --graph --abbrev-commit
 
