--- a/.tmux.conf
+++ b/.tmux.conf
@@ -72,9 +72,15 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 # bind -T copy-mode-vi y if-shell "$is_osx" "send-keys -X copy-pipe-and-cancel 'pbcopy'" "send-keys -X copy-pipe-and-cancel 'xclip -selection clipboard -i'"
 bind -T copy-mode-vi r send-keys -X rectangle-toggle
 
+if-shell "test -n -f ~/.tmux/plugin/tpm" "git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm"
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-yank/yank.tmux'
+set -g @plugin 'tmux-resurrect/resurrect.tmux'
+set -g @plugin 'tmux-continuum/continuum.tmux'
+set -g @plugin 'olimorris/tmux-pomodoro-plus'
+
 if-shell "test -f ~/.tmuxline.conf" "source ~/.tmuxline.conf"
-if-shell "test -f ~/.tmux-plugins/tmux-yank/yank.tmux" "run-shell ~/.tmux-plugins/tmux-yank/yank.tmux"
-if-shell "test -f ~/.tmux-plugins/tmux-resurrect/resurrect.tmux" "run-shell ~/.tmux-plugins/tmux-resurrect/resurrect.tmux"
-if-shell "test -f ~/.tmux-plugins/tmux-continuum/continuum.tmux" "run-shell ~/.tmux-plugins/tmux-continuum/continuum.tmux"
-if-shell "test -f ~/.tmux-plugins/tmux-weather/tmux-weather.tmux" "run-shell ~/.tmux-plugins/tmux-weather/tmux-weather.tmux"
-if-shell "test -f ~/.tmux-plugins/tmux-temp/temp.tmux" "run-shell ~/.tmux-plugins/tmux-temp/temp.tmux"
+
+run '~/.tmux/plugins/tpm/tpm'
