--- a/.tmux.conf
+++ b/.tmux.conf
@@ -75,10 +75,9 @@ if-shell "test -n -f ~/.tmux/plugin/tpm" "git clone https://github.com/tmux-plug
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-yank/yank.tmux'
-# set -g @plugin 'tmux-resurrect/resurrect.tmux'
-# set -g @plugin 'tmux-continuum/continuum.tmux'
-# set -g @plugin 'olimorris/tmux-pomodoro-plus'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 if-shell "test -f ~/.tmuxline.conf" "source ~/.tmuxline.conf"
 
