chore: fix zsh bindkey

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,8 +14,9 @@ set -s set-clipboard     on
 
 set -g update-environment "SSH_AUTH_SOCK SSH_CLIENT SSH_CONNECTION DISPLAY"
 
-set -g  default-terminal 'tmux-256color'
-set-option -a terminal-features 'xterm-256color:RGB'
+set -g default-command 'zsh'
+set -g default-terminal 'tmux-256color'
+set -a terminal-features 'xterm-256color:RGB' # -a means append, not replace
 
 # set -g  terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
 # set -as terminal-overrides ',xterm-256color:RGB'
@@ -78,6 +79,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'xamut/tmux-weather'
 
 if-shell "test -f ~/.tmuxline.conf" "source ~/.tmuxline.conf"
 
