--- a/.tmux.conf
+++ b/.tmux.conf
@@ -72,15 +72,14 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y if-shell "$is_osx" "send-keys -X copy-pipe-and-cancel 'pbcopy'" "send-keys -X copy-pipe-and-cancel 'xclip -selection clipboard -i'"
 bind -T copy-mode-vi r send-keys -X rectangle-toggle
 
-if-shell "test -n -f ~/.tmux/plugin/tpm" "git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm"
-
+if-shell '[ ! -d ~/.tmux/plugins/tpm ]' 'run-shell "mkdir -p ~/.tmux/plugins && git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm"'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'xamut/tmux-weather'
+run "$HOME/.tmux/plugins/tpm/tpm"
 
 if-shell "test -f ~/.tmuxline.conf" "source ~/.tmuxline.conf"
 
-run '~/.tmux/plugins/tpm/tpm'
