--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -1,6 +1,6 @@
 # https://alacritty.org/config-alacritty.html
-
 [font]
-size = 11
+size = 13
 normal.family = "JetBrainsMono Nerd Font"
-normal.style = "Light"
+normal.style = "Thin"
+offset.y = 6
