--wip-- [skip ci]

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -79,7 +79,8 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'xamut/tmux-weather'
-run "$HOME/.tmux/plugins/tpm/tpm"
 
 if-shell "test -f ~/.tmuxline.conf" "source ~/.tmuxline.conf"
+
+run "~/.tmux/plugins/tpm/tpm" 
 
