--- a/.tmuxline.conf
+++ b/.tmuxline.conf
@@ -17,6 +17,6 @@ setw -g window-status-separator ""
 setw -g window-status-style "none,fg=colour250,bg=colour234"
 # set -g status-left "#[fg=colour16,bg=colour254,bold] #S #[fg=colour254,bg=colour234,nobold,nounderscore,noitalics]"
 set -g status-left "#[fg=colour16,bg=colour234,bold] 💖 #[fg=colour254,bg=colour234,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour236,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour247,bg=colour236] %Y-%m-%d %H:%M #{weather} #[fg=colour252,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour16,bg=#6ac0ff] #h #{pomodoro_status}"
+set -g status-right "#(rainbarf --no-battery --rgb --bright) #[fg=colour236,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour247,bg=colour236] %Y-%m-%d %H:%M #{weather} #[fg=colour252,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour16,bg=#6ac0ff] #h #{pomodoro_status}"
 setw -g window-status-format "#[fg=colour244,bg=colour234] #I #[fg=colour250,bg=colour234] #W "
 setw -g window-status-current-format "#[fg=colour234,bg=colour31,nobold,nounderscore,noitalics]#[fg=colour117,bg=colour31] #I #[fg=colour231,bg=colour31,bold] #W #[fg=colour31,bg=colour234,nobold,nounderscore,noitalics]"
