--- a/.tmux.conf
+++ b/.tmux.conf
@@ -76,6 +76,7 @@ if-shell '[ ! -d ~/.tmux/plugins/tpm ]' 'run-shell "mkdir -p ~/.tmux/plugins && 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'xamut/tmux-weather'
