--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,9 @@
 [user]
 	email = \"pwang2@live.com\"
 	name = Peng Wang
+[credential "https://github.com"]
+	helper = 
+	helper = !/home/linuxbrew/.linuxbrew/bin/gh auth git-credential
+[credential "https://gist.github.com"]
+	helper = 
+	helper = !/home/linuxbrew/.linuxbrew/bin/gh auth git-credential
