--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,6 +50,15 @@ bind -r j resize-pane -D 5
 bind -r h resize-pane -L 5
 bind -r l resize-pane -R 5
 
+bind -n F1 select-window -t :1
+bind -n F2 select-window -t :2
+bind -n F3 select-window -t :3
+bind -n F4 select-window -t :4
+bind -n F5 select-window -t :5
+bind -n F6 select-window -t :6
+bind -n F7 select-window -t :7
+bind -n F8 select-window -t :8
+
 bind -nr C-S-Left  swap-window -t -1\; previous-window
 bind -nr C-S-Right swap-window -t +1\; next-window
 
