--wip-- [skip ci]

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,10 +14,10 @@ set -s set-clipboard     on
 
 set -g update-environment "SSH_AUTH_SOCK SSH_CLIENT SSH_CONNECTION DISPLAY"
 
-set -g default-command 'zsh'
 set -g default-terminal 'tmux-256color'
 set -a terminal-features 'xterm-256color:RGB' # -a means append, not replace
 
+# set -g default-command "${SHELL} -l"
 # set -g  terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
 # set -as terminal-overrides ',xterm-256color:RGB'
 
@@ -30,6 +30,7 @@ set -g @continuum-restore 'on'
 set -g @tmux-weather-location "Chicago"
 
 setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
+setenv -g PATH "/home/linuxbrew/.linuxbrew/bin:$PATH"
 
 unbind x; bind x kill-pane
 unbind r; bind r source-file ~/.tmux.conf\; display "config reloaded!"
@@ -54,7 +55,7 @@ bind -n F1 select-window -t :1
 bind -n F2 select-window -t :2
 bind -n F3 select-window -t :3
 bind -n F4 select-window -t :4
-bind -n F5 select-window -t :5
+bind -n F5 select-window -t :g
 bind -n F6 select-window -t :6
 bind -n F7 select-window -t :7
 bind -n F8 select-window -t :8
@@ -81,7 +82,7 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y if-shell "$is_osx" "send-keys -X copy-pipe-and-cancel 'pbcopy'" "send-keys -X copy-pipe-and-cancel 'xclip -selection clipboard -i'"
 bind -T copy-mode-vi r send-keys -X rectangle-toggle
 
-if-shell '[ ! -d ~/.tmux/plugins/tpm ]' 'run-shell "mkdir -p ~/.tmux/plugins && git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm"'
+if-shell 'test ! -d ~/.tmux/plugins/tpm' 'run-shell "mkdir -p ~/.tmux/plugins && git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm"'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
