--wip-- [skip ci]

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,7 @@ set -g prefix            C-a
 set -g focus-events      on
 set -g mouse             on
 set -g renumber-windows  on
+set -g extended-keys     on
 set -s set-clipboard     on
 
 set -g update-environment "SSH_AUTH_SOCK SSH_CLIENT SSH_CONNECTION DISPLAY"
@@ -55,7 +56,7 @@ bind -n F1 select-window -t :1
 bind -n F2 select-window -t :2
 bind -n F3 select-window -t :3
 bind -n F4 select-window -t :4
-bind -n F5 select-window -t :g
+bind -n F5 select-window -t :5
 bind -n F6 select-window -t :6
 bind -n F7 select-window -t :7
 bind -n F8 select-window -t :8
