--wip-- [skip ci]

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -74,6 +74,13 @@ bind -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 
+# Unbind Ctrl+Enter to prevent conflict with Ctrl+j navigation
+#need to add follow to windows terminal actions accordingly.
+# { "command": { "action": "sendInput", "input": "\u001b[13;5u" }, "keys": "ctrl+enter" }
+# { "command": { "action": "sendInput", "input": "\u001b[13;2u" }, "keys": "shift+enter" }
+unbind -n C-Enter; bind -n C-Enter send-keys Escape "[13;5u"
+unbind -n S-Enter; bind -n S-Enter send-keys Escape "[13;2u"
+
 bind -T copy-mode-vi C-h select-pane -L
 bind -T copy-mode-vi C-j select-pane -D
 bind -T copy-mode-vi C-k select-pane -U
