--wip-- [skip ci]

--- a/config/opencode/config.json
+++ b/config/opencode/config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://opencode.ai/config.json",
-  "enabled_providers": ["github-copilot"],
+  "enabled_providers": ["github-copilot", "deepseek"],
   "keybinds": {
     "leader": "ctrl+x",
     "app_exit": "ctrl+c,ctrl+d,<leader>q",
