--- a/.tmuxline.conf
+++ b/.tmuxline.conf
@@ -7,16 +7,17 @@ set -g status-left-style "none"
 set -g message-command-style "fg=colour231,bg=colour31"
 set -g status-right-style "none"
 set -g pane-active-border-style "fg=colour25"
-set -g status-style "none,bg=colour234"
+set -g status-style bg=default
+# set -g status-style "none,bg=colour234"
 set -g message-style "fg=colour231,bg=colour31"
 set -g pane-border-style "fg=colour240"
 set -g status-right-length "100"
 set -g status-left-length "100"
 setw -g window-status-activity-style "none"
 setw -g window-status-separator ""
-setw -g window-status-style "none,fg=colour250,bg=colour234"
-# set -g status-left "#[fg=colour16,bg=colour254,bold] #S #[fg=colour254,bg=colour234,nobold,nounderscore,noitalics]"
-set -g status-left "#[fg=colour16,bg=colour234,bold] 💖 #[fg=colour254,bg=colour234,nobold,nounderscore,noitalics]"
-set -g status-right "#(/home/linuxbrew/.linuxbrew/bin/rainbarf --no-battery --rgb --bright) #[fg=colour236,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour247,bg=colour236] %Y-%m-%d %H:%M #{weather} #[fg=colour252,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour16,bg=#6ac0ff] #h #{pomodoro_status}"
-setw -g window-status-format "#[fg=colour244,bg=colour234] #I #[fg=colour250,bg=colour234] #W "
-setw -g window-status-current-format "#[fg=colour234,bg=colour31,nobold,nounderscore,noitalics]#[fg=colour117,bg=colour31] #I #[fg=colour231,bg=colour31,bold] #W #[fg=colour31,bg=colour234,nobold,nounderscore,noitalics]"
+setw -g window-status-style "none,fg=colour250,bg=default"
+
+set -g status-left "#[fg=colour16,bg=default] 💖 #[fg=colour254,bg=default,nobold,nounderscore,noitalics]"
+set -g status-right "#(/home/linuxbrew/.linuxbrew/bin/rainbarf --no-battery --rgb --bright) #[fg=colour236,bg=default,nobold,nounderscore,noitalics]#[fg=colour247,bg=default] %Y-%m-%d %H:%M"
+setw -g window-status-format " #[fg=colour244,bg=default] #I#[fg=colour250,bg=default] #W  "
+setw -g window-status-current-format "#[fg=colour231,bg=colour31,nobold,nounderscore,noitalics]#[fg=colour117,bg=colour31] #I #[fg=colour231,bg=colour31,bold] #W #[fg=colour31,bg=default,nobold,nounderscore,noitalics]"
