--wip-- [skip ci]

--- a/.tmuxline.conf
+++ b/.tmuxline.conf
@@ -18,6 +18,6 @@ setw -g window-status-separator ""
 setw -g window-status-style "none,fg=colour250,bg=default"
 
 set -g status-left "#[fg=colour16,bg=default] 💖 #[fg=colour254,bg=default,nobold,nounderscore,noitalics]"
-set -g status-right "#(/home/linuxbrew/.linuxbrew/bin/rainbarf --no-battery --rgb --bright) #[fg=colour236,bg=default,nobold,nounderscore,noitalics]#[fg=colour247,bg=default] %Y-%m-%d %H:%M"
+set -g status-right "#(/home/linuxbrew/.linuxbrew/bin/rainbarf --no-battery --rgb --bright) #[fg=colour236,bg=default,nobold,nounderscore,noitalics]#[fg=colour247,bg=default] %Y-%m-%d %H:%M #{weather}"
 setw -g window-status-format " #[fg=colour244,bg=default] #I#[fg=colour250,bg=default] #W  "
 setw -g window-status-current-format "#[fg=colour231,bg=colour31,nobold,nounderscore,noitalics]#[fg=colour117,bg=colour31] #I #[fg=colour231,bg=colour31,bold] #W #[fg=colour31,bg=default,nobold,nounderscore,noitalics]"
