--wip-- [skip ci]

--- a/.tmuxline.conf
+++ b/.tmuxline.conf
@@ -7,8 +7,7 @@ set -g status-left-style "none"
 set -g message-command-style "fg=colour231,bg=colour31"
 set -g status-right-style "none"
 set -g pane-active-border-style "fg=colour25"
-set -g status-style bg=default
-# set -g status-style "none,bg=colour234"
+set -g status-style "bg=default"
 set -g message-style "fg=colour231,bg=colour31"
 set -g pane-border-style "fg=colour240"
 set -g status-right-length "100"
@@ -18,6 +17,6 @@ setw -g window-status-separator ""
 setw -g window-status-style "none,fg=colour250,bg=default"
 
 set -g status-left "#[fg=colour16,bg=default] 💖 #[fg=colour254,bg=default,nobold,nounderscore,noitalics]"
-set -g status-right "#(/home/linuxbrew/.linuxbrew/bin/rainbarf --no-battery --rgb --bright) #[fg=colour236,bg=default,nobold,nounderscore,noitalics]#[fg=colour247,bg=default] %Y-%m-%d %H:%M #{weather}"
+set -g status-right "#(/home/linuxbrew/.linuxbrew/bin/rainbarf --width 30 --no-battery --rgb --bright) #[fg=colour236,bg=default,nobold,nounderscore,noitalics]#[fg=colour247,bg=default] %Y-%m-%d %H:%M #{weather}"
 setw -g window-status-format " #[fg=colour244,bg=default] #I#[fg=colour250,bg=default] #W  "
-setw -g window-status-current-format "#[fg=colour231,bg=colour31,nobold,nounderscore,noitalics]#[fg=colour117,bg=colour31] #I #[fg=colour231,bg=colour31,bold] #W #[fg=colour31,bg=default,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=colour117,bg=colour31] #I #[fg=colour231,bg=colour31,bold] #W #[fg=colour31,bg=default,nobold,nounderscore,noitalics]"
