--- a/.tmuxline.conf
+++ b/.tmuxline.conf
@@ -3,13 +3,14 @@
 
 set -g status-justify "left"
 set -g status "on"
+set -g status-position "bottom"
 set -g status-left-style "none"
 set -g message-command-style "fg=colour231,bg=colour31"
 set -g status-right-style "none"
-set -g pane-active-border-style "fg=colour25"
+set -g pane-active-border-style "fg=colour252"
 set -g status-style "bg=default"
 set -g message-style "fg=colour231,bg=colour31"
-set -g pane-border-style "fg=colour240"
+set -g pane-border-style "fg=colour252"
 set -g status-right-length "100"
 set -g status-left-length "100"
 setw -g window-status-activity-style "none"
